--- a/delivery_food_03/styles.css
+++ b/delivery_food_03/styles.css
@@ -36,6 +36,7 @@ body {
     align-items: center;
     gap: 4px;
     outline: none;
+    cursor: pointer;
 }
 
 .btn-primary {
@@ -211,6 +212,7 @@ body {
     background-color: var(--Gray-gray-1, #FFF);
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.05);
     overflow: hidden;
+    text-decoration: none;
 }
 
 .products-cart_image {
@@ -294,6 +296,148 @@ body {
     position: absolute;
     left: -14px;
     top: 14px;
+}
+
+.products-cart_description--name {
+    margin: 0;
+    color: #000;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
+.products-cart_description--text {
+    margin: 0;
+    color: #8c8c8c;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.products-cart_description-controls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    column-gap: 30px;
+}
+
+.products-cart_description-controls--price {
+    color: #000;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+}
+
+.cart-modal__overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.40);
+    align-items: center;
+    justify-content: center;
+}
+
+.cart-modal__overlay.open {
+    display: flex;
+}
+
+.cart-modal {
+    width: 100%;
+    max-width: 780px;
+    padding: 40px 45px;
+    border-radius: 5px;
+    background: #FFF;
+}
+
+.cart-modal__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 48px;
+}
+
+.cart-modal__header--title {
+    color: #000;
+    font-size: 36px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.cart-modal__header--close {
+    cursor: pointer;
+}
+
+.cart-modal__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 50px;
+}
+
+.cart-modal__footer--price {
+    border-radius: 5px;
+    background: #262626;
+    color: #fafafa;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 20px;
+}
+
+.cart-modal__footer--controls {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.cart-item:not(:last-child) {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #D9D9D9;
+}
+
+.cart-item__title {
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    margin: 0;
+}
+
+.cart-item__controls {
+    display: flex;
+    align-items: center;
+}
+
+.cart-item__controls--price {
+    margin-right: 47px;
+    color: #000;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+}
+
+.cart-item__controls button {
+    border: 1px solid #40A9FF;
+    color: #40A9FF;
+}
+
+.cart-item__controls--count {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 @media (max-width: 991px) {
